# Cloudflare-Utils

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cf-utils.py  change_dns.py  cli.py  cloudflare-utils.service  cloudflare-utils.timer  config_manager.py  configs.json  install.sh  menu.sh  package.json  pyproject.toml  requirements.txt  rotate_from_config.py  tag.sh  uninstall.sh  update.sh  version.py
.github/workflows/: ci.yml
DNS/: dns_menu.sh  dns_rotator.sh  show_dns.py
DNS/rotator/: dns_rotator.sh
asset/: Issei.txt
debian/: changelog  cloudfiare-utils.postinst  cloudfiare-utils.prerm  cloudflare-utils.install  control  copyright  rules
dns/: dns_menu.sh  dns_rotator.py  dns_rotator.sh  show_dns.py
dns/rotator/: dns_rotator.py  dns_rotator.sh
dns_ip_rotator/: cfg.sh  menu.sh  run.sh  setup.sh  uninstall.sh
src/: app.py  background_service.py  cloudflare_api.py  config.py  display.py  dns_manager.py  error_handler.py  helpers.py  input_helper.py  ip_rotator.py  logger.py  permissions_registry.py  self_monitor.py  state_manager.py  trigger_evaluator.py  triggers.py  validator.py
src/agent/: agent.py  cfu-agent.py  cloudflare-agent.service  cloudflare-utils-agent.service  config.json.template  helpers.py  requirements.txt  security.py  version.py
src/bot/: cloudflare-utils-bot.service  handlers.py  i18n.json  i18n.py  main.py
src/bot/menus/: accounts.py  dns.py  firewall.py  language.py  main.py  (+2 more)
src/cloudflare_utils/: change_dns.py
src/cloudflare_utils_manager/: __init__PY  main.py
src/core/: __init__.py  accounts.py  app.py  background_service.py  cloudflare_api.py  config.py  dns.py  dns_manager.py  exceptions.py  helpers.py  ip_rotator.py  logger.py  service_manager.py  trigger_evaluator.py  triggers.py  zones.py
src/menus/: accounts.py  consumption_alarms.py  dns.py  main.py  rotator_main.py  rotator_multi_record.py  rotator_record_group.py  rotator_single_record.py  settings.py  telegram_bot.py  traffic_monitoring.py  trigger_management.py  utils.py  zones.py
tests/: test_app.py  test_bot_handlers.py  test_bot_main.py  test_bot_menus.py  test_change_dns.py  test_core_accounts.py  test_core_app.py  test_core_dns.py  test_core_zones.py  test_dns_manager.py  test_fetch_records.py  test_helpers.py  test_ip_rotation.py  test_ip_rotator.py  test_logger.py  test_new_triggers.py  test_permissions.py  test_traffic_monitoring.py  test_triggers.py  test_update_record.py
tests/integration/: test_integration.py
