[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudflare-utils"
version = "0.1.0" # Initial version
description = "Utilities to interact with Cloudflare DNS records for automated updates."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [
  {name = "Issei-177013", email = "issei@cock.li"}, # Placeholder email
]
keywords = ["cloudflare", "dns", "automation", "dyndns"]

dependencies = [
    "cloudflare>=2.19.0", 
    "python-dotenv>=0.20.0",
    "tabulate>=0.9.0"
]

[project.optional-dependencies]
manager = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "inquirerpy>=0.3.4"
]

[project.urls]
Homepage = "https://github.com/Issei-177013/Cloudflare-Utils"
Issues = "https://github.com/Issei-177013/Cloudflare-Utils/issues"

[project.scripts]
cloudflare-utils = "cloudflare_utils.change_dns:main_cli"
cfu-manager = "cloudflare_utils_manager.main:app"

[tool.setuptools.packages.find]
where = ["src"]
